--- a/ReactBasic/learn-redux-middleware/package.json
+++ b/ReactBasic/learn-redux-middleware/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "learn-redux-middleware",
+  "name": "react-redux-tutorial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "create-react-class": "^15.7.0",
+    "immer": "^9.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
