--- a/ReactBasic/learn-redux-middleware/package.json
+++ b/ReactBasic/learn-redux-middleware/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
