--- a/ReactBasic/blog/blog-backend/package.json
+++ b/ReactBasic/blog/blog-backend/package.json
@@ -5,9 +5,15 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-prettier": "^8.5.0",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "koa-router": "^12.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.28.0"
+    "eslint": "^8.28.0",
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "start": "node src",
+    "start:dev": "nodemon --watch src/ src/index.js"
   }
 }
