--- a/ReactBasic/package.json
+++ b/ReactBasic/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "mongoose": "^6.7.4",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5"
