--- a/ReactBasic/blog/blog-backend/package.json
+++ b/ReactBasic/blog/blog-backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
@@ -14,7 +15,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "node src",
-    "start:dev": "nodemon --watch src/ src/index.js"
+    "start": "node -r esm src",
+    "start:dev": "nodemon --watch src/ -r esm src/index.js"
   }
 }
