--- a/ReactBasic/package.json
+++ b/ReactBasic/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.0.3",
+    "esm": "^3.2.25",
     "mongoose": "^6.7.4",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
